# explore-eqa_semnav

./: .gitignore  Dockerfile  run_gemini_exp.py  test_scene_with_ros.py
cfg/: clip_exp.yaml  gemini_exp.yaml  test_scene.yaml  test_scene_with_ros.yaml  vlm_exp.yaml
data/: eqa_dataset_enrich_labels.yaml
docker_scripts/: create_environment_profile.sh  docker_build.sh  docker_run.sh  docker_tag.sh
script/: create_example_prompt.py  gpt4_iterative_planner.py  gpt4_planner.py  gpt4_planner_structured_output.py
src/: scene_graph_sim.py  vlm.py
src/habitat_hydra_bridge/: CMakeLists.txt  package.xml
src/habitat_hydra_bridge/scripts/: habitat_hydra_bridge_node.py
tests/: load_results.py  test_dynamic_enum_planner.py  test_gemini_structured_output.py
