<?xml version="1.0"?>
<package format="2">
  <name>habitat_hydra_bridge</name>
  <version>0.0.1</version>
  <description>A simple ROS package that publishes data from an instance of Habitat-Sim.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>python3</build_depend>
  <exec_depend>python3</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <depend>std_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
